Fix Leaderboard height on smaller screens.

--- a/themes/experience-engine/assets/styles/components/ads/ad.css
+++ b/themes/experience-engine/assets/styles/components/ads/ad.css
@@ -11,6 +11,11 @@
 		@media (--min-xxlarge-viewport) {
 			min-height: 122px;
 		}
+
+		@media (--max-large-viewport) {
+			min-height: 82px;
+		}
+
 	}
 
 	&.-centered {
